--- a/ELearningManagement - backend/src/main/resources/application.properties
+++ b/ELearningManagement - backend/src/main/resources/application.properties
@@ -9,3 +9,5 @@ security.ignored=/**
 
 spring.jpa.hibernate.ddl-auto = update
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL55Dialect
+spring.servlet.multipart.max-file-size=50MB
+spring.servlet.multipart.max-request-size=50MB
