--- a/ELearningManagement - backend/src/main/resources/application.properties
+++ b/ELearningManagement - backend/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 server.port = 8080
 spring.datasource.url = jdbc:mysql://localhost:3306/elearningsystem
 spring.datasource.username = root
-spring.datasource.password = rootroot
+spring.datasource.password = regeleRomaniei794
 
 spring.jpa.show-sql = true
 security.basic.enable: false
